// Copyright (c) Microsoft Corporation. All rights reserved.
// Licensed under the MIT License.
syntax = "proto3";

package azdext;

option go_package = "github.com/azure/azure-dev/cli/azd/pkg/azdext;azdext";

import "models.proto";

service AccountService {
  // ListSubscriptions lists all subscriptions accessible by the current account.
  rpc ListSubscriptions (ListSubscriptionsRequest) returns (ListSubscriptionsResponse);

  // LookupTenant resolves the tenant ID required to access a specific subscription.
  rpc LookupTenant (LookupTenantRequest) returns (LookupTenantResponse);
}

message ListSubscriptionsRequest {
  // Optional: filter subscriptions by tenant ID.
  optional string tenant_id = 1;
}

message ListSubscriptionsResponse {
  repeated Subscription subscriptions = 1;
}

message LookupTenantRequest {
  // The subscription ID to lookup the tenant for.
  string subscription_id = 1;
}

message LookupTenantResponse {
  // The tenant ID required to access the subscription.
  string tenant_id = 1;
}
