syntax = "proto3";

package azdext;

option go_package = "github.com/azure/azure-dev/cli/azd/pkg/azdext/gen;azdext";

// Messages for requests and responses
message EmptyRequest {}

// EmptyResponse message for methods with no output.
message EmptyResponse {}

// Message representing a Subscription
message Subscription {
  string id = 1;
  string name = 2;
  string tenantId = 3;
  string userAccessTenant_id = 4;
  bool isDefault = 5;
}

message ResourceGroup {
  string id = 1;
  string name = 2;
  string location = 3;
}

message Location {
  string name = 1;
  string displayName = 2;
  string regionalDisplayName = 3;
}

message AzureScope {
  string tenantId = 1;
  string subscriptionId = 2;
  string location = 3;
  string resourceGroup = 4;
}

message AzureContext {
  AzureScope scope = 1;
  repeated string resources = 2;
}

message Resource {
  string id = 1;
  string name = 2;
  string type = 3;
  string location = 4;
}

message ResourceExtended {
  string id = 1;
  string name = 2;
  string type = 3;
  string location = 4;
  string kind = 5;
}